--- a/index.html
+++ b/index.html
@@ -1,15 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <main></main>
+
+    <footer class="text-bg-light bg bg-black">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-3">
+            <a href="index.html">
+            <img src="./img/g3Sound.gif" alt="Logo" class="logo-footer" id="imgFooter"/>
+        </a>
+            
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Productos</a
+                >
+              </li>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Ingresar</a
+                >
+              </li>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Registro</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Acerca de</a
+                >
+              </li>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Acerca de Nosotros</a
+                >
+              </li>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Ayuda</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Legal</a
+                >
+              </li>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Información Legal</a
+                >
+              </li>
+              <li class="mt-3">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Privacidad</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="./JS/app.js"></script>
-</body>
+  </body>
 </html>
