--- a/index.html
+++ b/index.html
@@ -1,15 +1,113 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Streaming de musica" />
+    <meta name="keywords" content="musica, streaming, artistas, tendencias" />
+    <meta name="author" content="Grupo 3" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <header>
+      <nav
+        class="efectoBlur navbar navbar-expand-md bg-body-tertiary navbar bg-dark border-bottom border-body py-3"
+        data-bs-theme="dark"
+      >
+        <div class="container">
+          <a class="navbar-brand m-lg-0 px-md-4" href="#">
+            <!-- <img src="./IMG/g3SoundGIF.gif" alt="g3SoundGIF" id="imglogo"> -->
+            logo
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div id="elementosNavbar">
+              <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
+                <div class="d-flex" id="elementosNav">
+                  <li class="nav-item p-lg-3 px-xl-4 p-md-3 py-sm-3">
+                    <a class="nav-link active" aria-current="page" href="#">
+                      <i class="fa-solid fa-house" style="color: #ffffff"></i>
+                      Inicio
+                    </a>
+                  </li>
+                  <li class="nav-item p-lg-3 px-xl-4 p-md-3 py-sm-3">
+                    <a class="nav-link" href="#">
+                      <i class="fa-solid fa-globe" style="color: #ffffff"></i>
+                      Libreria</a
+                    >
+                  </li>
+                  <li class="nav-item p-lg-3 px-xl-4 p-md-3 py-sm-3">
+                    <a class="nav-link" href="#">
+                      <i
+                        class="fa-solid fa-bookmark"
+                        style="color: #ffffff"
+                      ></i>
+                      Lista de reproduccion
+                    </a>
+                  </li>
+                </div>
+                <form
+                  class="d-flex justify-content-center align-items-center p-lg-2 px-xl-4"
+                  role="search"
+                >
+                  <input
+                    id="inputBuscar"
+                    class="form-control me-3 p-lg-2 mx-xl-4 mb-sm-3"
+                    type="search"
+                    placeholder="Buscar"
+                    aria-label="Buscar"
+                  />
+                  <a href="#" type="submit" id="buscarNavbar" class="mx-2">
+                    <i
+                      class="fa-solid fa-magnifying-glass"
+                      style="color: #ffffff"
+                    ></i>
+                  </a>
+                </form>
+              </ul>
+            </div>
+            <div class="d-flex flex-column">
+              <button class="btn btn-success my-3 fs-5" type="submit">
+                Iniciar sesión
+              </button>
+              <button class="btn btn-success fs-5" type="submit">Registrate</button>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/166a168cfc.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./JS/app.js"></script>
-</body>
+  </body>
 </html>
