Se realizo cambios a los estilos

--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg-3">
             <a href="index.html">
-            <img src="./img/g3Sound.gif" alt="Logo" class="logo-footer" id="imgFooter"/>
+            <img src="./img/g3Sound.gif" alt="Logo" class="d-flex" id="imgFooter"/>
         </a>
             
           </div>
           <div class="col-12 col-sm-12 col-md-4 col-lg-3">
             <ul>
-              <li class="mt-3">
+              <li class="mt-3 list-unstyled">
                 <a
                   href=""
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Productos</a
                 >
               </li>
-              <li class="mt-3">
+              <li class="mt-3 list-unstyled">
                 <a
                   href=""
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Ingresar</a
                 >
               </li>
-              <li class="mt-3">
+              <li class="mt-3 list-unstyled">
                 <a
                   href=""
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
@@ -51,21 +51,17 @@
           </div>
           <div class="col-12 col-sm-12 col-md-4 col-lg-3">
             <ul>
-              <li class="mt-3">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Acerca de</a
-                >
+              <li class="mt-3 list-unstyled">
+                <h4 class="text-light">Acerca de</h4>
               </li>
-              <li class="mt-3">
+              <li class="mt-3 list-unstyled">
                 <a
                   href=""
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Acerca de Nosotros</a
                 >
               </li>
-              <li class="mt-3">
+              <li class="mt-3 list-unstyled">
                 <a
                   href=""
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
@@ -76,21 +72,17 @@
           </div>
           <div class="col-12 col-sm-12 col-md-4 col-lg-3">
             <ul>
-              <li class="mt-3">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Legal</a
-                >
+              <li class="mt-3 list-unstyled">
+                <h4 class="text-light">Legales</h4>
               </li>
-              <li class="mt-3">
+              <li class="mt-3 list-unstyled">
                 <a
                   href=""
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Información Legal</a
                 >
               </li>
-              <li class="mt-3">
+              <li class="mt-3 list-unstyled">
                 <a
                   href=""
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
