--- a/index.html
+++ b/index.html
@@ -9,29 +9,38 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+  />
     <link rel="stylesheet" href="./CSS/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <main></main>
+    <main>
+        
+    </main>
 
-    <footer class="text-bg-light bg bg-black">
-      <div class="container text-center">
+    <footer class="">
+      <div class="container text-center py-3">
         <div class="row">
-          <div class="col-12 col-sm-12 col-md-12 col-lg-3">
-            <a href="index.html">
-            <img src="./img/g3Sound.gif" alt="Logo" class="d-flex" id="imgFooter"/>
-        </a>
-            
+          <div
+            class="col-12 col-sm-12 col-md-12 col-lg-3"
+            id="contenedorLogoFooter"
+          >
+            <a href="index.html" class="contenedorLogo">
+              <img
+                src="./img/logosoundg3.png"
+                alt="Logo"
+                class=""
+                id="imgFooter"
+              />
+            </a>
           </div>
           <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul>
+            <ul class="listaFooter">
               <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Productos</a
-                >
+                <h4 class="text-light fw-bold">Productos</h4>
               </li>
               <li class="mt-3 list-unstyled">
                 <a
@@ -49,10 +58,10 @@
               </li>
             </ul>
           </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3 ">
+            <ul class="listaFooter">
               <li class="mt-3 list-unstyled">
-                <h4 class="text-light">Acerca de</h4>
+                <h4 class="text-light fw-bold">Acerca de</h4>
               </li>
               <li class="mt-3 list-unstyled">
                 <a
@@ -69,11 +78,28 @@
                 >
               </li>
             </ul>
+            <div class="d-flex flex-column">
+                <p class="text-light">Síguenos en nuestras redes:</p>
+                <div class="d-flex justify-content-center">
+                  <a href="../pages/error404.html"
+                    ><i class="bi bi-instagram fs-3 m-2"></i
+                  ></a>
+                  <a href="../pages/error404.html"
+                    ><i class="bi bi-facebook fs-3 m-2"></i
+                  ></a>
+                  <a href="../pages/error404.html"
+                    ><i class="bi bi-twitter fs-3 m-2"></i
+                  ></a>
+                  <a href="../pages/error404.html"
+                    ><i class="bi bi-linkedin fs-3 m-2"></i
+                  ></a>
+                </div>
+              </div>
           </div>
           <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul>
+            <ul class="listaFooter">
               <li class="mt-3 list-unstyled">
-                <h4 class="text-light">Legales</h4>
+                <h4 class="text-light fw-bold">Legales</h4>
               </li>
               <li class="mt-3 list-unstyled">
                 <a
@@ -92,6 +118,9 @@
             </ul>
           </div>
         </div>
+      </div>
+      <div class="container-fluid d-flex justify-content-center">
+        <p class="text-light">&copy; Sound G3 - Todos los derechos reservados</p>
       </div>
     </footer>
     <script
