agregue y mejore las imagenes del error

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -17,22 +17,22 @@
   </head>
   <body>
     <header><nav></nav></header>
-    <main>
+    <main class="fondopag">
       <img 
       id="fondogr"
-        src="../img/FONDO.jpg"
+        src="../img/fondo.png"
         class="text-center fondo mb-0"
         alt="imagen de error 404 con auriculares"
       />
       <img id="fondoch" 
       class="text-center"
-      src="../img/fondosm.jpg" alt="">
+      src="../img/fondosm.png" alt="">
       <h1 class="text-center ohno ">¡Oh no!</h1>
-      <h2 class="text-center ">
+      <h2 class="text-center text-white ">
         No hemos podido reproducir esta pista. Lo sentimos mucho.
       </h2>
      
-        <h3 class="text-center">
+        <h3 class="text-center text-white">
             Para regresar al inicio presione aquí.
         </h3>
         <div class="text-center" id="boton">
