se maquetó la seccion de canciones populares

--- a/index.html
+++ b/index.html
@@ -210,6 +210,121 @@
           </div>
         </div>
       </section>
+
+      <h2 class="text-white mx-3 mt-5">Canciones populares</h2>
+    <section class="my-3">
+      <div class="card">
+        <div
+          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+        >
+          <div class="text-center btn-play">
+            <i class="bi bi-play-circle reproducir"></i>
+          </div>
+
+          <div>
+            <p class="card-title mb-0">Nombre de la Canción</p>
+            <p class="card-text">Nombre del Artista</p>
+          </div>
+
+          <div class="nombreAlbum">
+            <p class="card-text">Nombre del Álbum</p>
+          </div>
+          <div class="btn-selecion">
+            <i  class="bi bi-heart" ></i>
+            <i  class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div
+          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+        >
+          <div class="text-center btn-play">
+            <i class="bi bi-play-circle reproducir"></i>
+          </div>
+
+          <div>
+            <p class="card-title mb-0">Nombre de la Canción</p>
+            <p class="card-text">Nombre del Artista</p>
+          </div>
+
+          <div class="nombreAlbum">
+            <p class="card-text">Nombre del Álbum</p>
+          </div>
+          <div class="btn-selecion">
+            <i class="bi bi-heart"></i>
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div
+          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+        >
+          <div class="text-center btn-play">
+            <i class="bi bi-play-circle reproducir"></i>
+          </div>
+
+          <div>
+            <p class="card-title mb-0">Nombre de la Canción</p>
+            <p class="card-text">Nombre del Artista</p>
+          </div>
+
+          <div class="nombreAlbum">
+            <p class="card-text">Nombre del Álbum</p>
+          </div>
+          <div class="btn-selecion">
+            <i class="bi bi-heart"></i>
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div
+          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+        >
+          <div class="text-center btn-play">
+            <i class="bi bi-play-circle reproducir"></i>
+          </div>
+
+          <div>
+            <p class="card-title mb-0">Nombre de la Canción</p>
+            <p class="card-text">Nombre del Artista</p>
+          </div>
+
+          <div class="nombreAlbum">
+            <p class="card-text">Nombre del Álbum</p>
+          </div>
+          <div class="btn-selecion">
+            <i class="bi bi-heart"></i>
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div
+          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+        >
+          <div class="text-center btn-play">
+            <i class="bi bi-play-circle reproducir"></i>
+          </div>
+
+          <div>
+            <p class="card-title mb-0">Nombre de la Canción</p>
+            <p class="card-text">Nombre del Artista</p>
+          </div>
+
+          <div class="nombreAlbum">
+            <p class="card-text">Nombre del Álbum</p>
+          </div>
+          <div class="btn-selecion">
+            <i class="bi bi-heart"></i>
+            <i class="bi bi-plus-circle"></i>
+          </div>
+        </div>
+      </div>
+
+    </section>
     </main>
     <footer></footer>
     <script
