Agregue las 6 cards restantes y le di estilo guiandome de trello

--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -30,13 +30,17 @@
     <link rel="stylesheet" href="../CSS/style.css" />
     <title>Sobre nosotros</title>
   </head>
-  <body>
+  <body class="">
     <header></header>
     <main>
-      <section>
+      <section class="fuentePrincipal">
         <article class="container text-center">
-          <h1 class="fuentePrincipal">&iquest;Quienes somos&quest;</h1>
-          <h3 class="fuentePrincipal">
+          <h1 class="fw-bold my-5 text-white">
+            &iquest;Quiénes somos&quest;<i
+              class="bi bi-person-raised-hand colorMoradoText"
+            ></i>
+          </h1>
+          <p class="fs-4 my-5 text-white">
             Somos una plataforma de streaming de música comprometida en brindar
             a nuestros usuarios acceso ilimitado a una amplia variedad de
             canciones y géneros musicales. Nuestra misión es ofrecer una
@@ -44,27 +48,163 @@
             la música descubrir, disfrutar y compartir sus canciones favoritas
             en cualquier momento y lugar. Con una interfaz intuitiva y funciones
             personalizadas
-          </h3>
+          </p>
         </article>
         <article class="container">
-          <div class="card" style="width: 18rem">
-            <img
-              src="../img/AVATAR CORNET.png"
-              class="card-img-top"
-              alt="Foto de Diego Cornet"
-            />
-            <div class="card-body text-center">
-              <h5 class="card-title">Diego Cornet</h5>
-              <p class="card-text">
-                Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
-                tecnología y por tal motivo me convertí en programador. por eso
-                hoy te traigo mi primer App de música.
-              </p>
-              <a
-                href="https://www.twitch.tv/cornet_z"
-                class="btn btn-primary colorMorado"
-                ><i class="bi bi-twitch"></i> Mi red social</a
-              >
+          <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="card colorCeleste border-dark m-2 shadow-lg">
+                <img
+                  src="../img/AVATAR CORNET.png"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Diego Cornet"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Diego Cornet</h5>
+                  <p class="card-text">
+                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
+                    tecnología y por tal motivo me convertí en programador. por
+                    eso hoy te traigo mi primer App de música.
+                  </p>
+                  <a
+                    href="https://www.twitch.tv/cornet_z"
+                    class="btn btn-primary colorMorado border-white"
+                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="card colorCeleste border-dark m-2 shadow-lg">
+                <img
+                  src="../img/AVATAR CORNET.png"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Diego Cornet"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Diego Cornet</h5>
+                  <p class="card-text">
+                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
+                    tecnología y por tal motivo me convertí en programador. por
+                    eso hoy te traigo mi primer App de música.
+                  </p>
+                  <a
+                    href="https://www.twitch.tv/cornet_z"
+                    class="btn btn-primary colorMorado border-white"
+                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="card colorCeleste border-dark m-2 shadow-lg">
+                <img
+                  src="../img/AVATAR CORNET.png"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Diego Cornet"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Diego Cornet</h5>
+                  <p class="card-text">
+                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
+                    tecnología y por tal motivo me convertí en programador. por
+                    eso hoy te traigo mi primer App de música.
+                  </p>
+                  <a
+                    href="https://www.twitch.tv/cornet_z"
+                    class="btn btn-primary colorMorado border-white"
+                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="card colorCeleste border-dark m-2 shadow-lg">
+                <img
+                  src="../img/AVATAR CORNET.png"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Diego Cornet"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Diego Cornet</h5>
+                  <p class="card-text">
+                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
+                    tecnología y por tal motivo me convertí en programador. por
+                    eso hoy te traigo mi primer App de música.
+                  </p>
+                  <a
+                    href="https://www.twitch.tv/cornet_z"
+                    class="btn btn-primary colorMorado border-white"
+                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="card colorCeleste border-dark m-2 shadow-lg">
+                <img
+                  src="../img/AVATAR CORNET.png"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Diego Cornet"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Diego Cornet</h5>
+                  <p class="card-text">
+                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
+                    tecnología y por tal motivo me convertí en programador. por
+                    eso hoy te traigo mi primer App de música.
+                  </p>
+                  <a
+                    href="https://www.twitch.tv/cornet_z"
+                    class="btn btn-primary colorMorado border-white"
+                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="card colorCeleste border-dark m-2 shadow-lg">
+                <img
+                  src="../img/AVATAR CORNET.png"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Diego Cornet"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Diego Cornet</h5>
+                  <p class="card-text">
+                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
+                    tecnología y por tal motivo me convertí en programador. por
+                    eso hoy te traigo mi primer App de música.
+                  </p>
+                  <a
+                    href="https://www.twitch.tv/cornet_z"
+                    class="btn btn-primary colorMorado border-white"
+                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="card colorCeleste border-dark m-2 shadow-lg">
+                <img
+                  src="../img/AVATAR CORNET.png"
+                  class="card-img-top rounded-circle p-3"
+                  alt="Foto de Diego Cornet"
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title fw-bold">Diego Cornet</h5>
+                  <p class="card-text">
+                    Hola, soy Diego Cornet... tengo 22 años, me gusta mucho la
+                    tecnología y por tal motivo me convertí en programador. por
+                    eso hoy te traigo mi primer App de música.
+                  </p>
+                  <a
+                    href="https://www.twitch.tv/cornet_z"
+                    class="btn btn-primary colorMorado border-white"
+                    ><i class="bi bi-twitch"></i> Mi red social</a
+                  >
+                </div>
+              </div>
             </div>
           </div>
         </article>
