se creo el maquetado de la seccion de planes

--- a/index.html
+++ b/index.html
@@ -325,6 +325,99 @@
       </div>
 
     </section>
+
+    <section class="my-5">
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-lg-4 col-md-6 mt-3">
+              <div class="card custom-card">
+                <div class="card-body text-bg-dark p-3">
+                  <h5 class="card-title my-3">Plan Básico: "Melodía Esencial"</h5>
+                  <ul>
+                    <li>Precio: $4.99 al mes</li>
+                    <li>Acceso ilimitado a la biblioteca de música estándar.</li>
+                    <li>Calidad de transmisión estándar (128 kbps).</li>
+                    <li>Anuncios ocasionales entre canciones.</li>
+                    <li>
+                      Posibilidad de crear listas de reproducción personalizadas.
+                    </li>
+                    <li>
+                      Descarga de hasta 30 canciones al mes para escuchar sin
+                      conexión.
+                    </li>
+                    <li>Soporte en dispositivos móviles y de escritorio.</li>
+                  </ul>   
+                </div>
+                <div class="card-footer bg-dark">
+                  <a href="#" class="btn btn-primary">Saber más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mt-3">
+              <div class="card custom-card">
+                <div class="card-body text-bg-dark p-3 ">
+                  <h5 class="card-title my-3">Plan Estándar: "Armonía Completa"</h5>
+                  <ul>
+                    <li>Precio: $9.99 al mes</li>
+                    <li>Acceso completo a la biblioteca de música premium.</li>
+                    <li>Calidad de transmisión mejorada (320 kbps).</li>
+                    <li>Sin anuncios durante la reproducción.</li>
+                    <li>
+                      Creación de listas de reproducción ilimitadas y
+                      personalizadas.
+                    </li>
+                    <li>
+                      Descarga ilimitada de canciones para escuchar sin conexión.
+                    </li>
+                    <li>Función de recomendaciones personalizadas.</li>
+                    <li>
+                      Soporte en dispositivos móviles, de escritorio y
+                      dispositivos inteligentes.
+                    </li>
+                  </ul>
+                  
+                </div>
+                <div class="card-footer bg-dark">
+                  <a href="#" class="btn btn-primary">Saber más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mt-3">
+              <div class="card custom-card">
+                <div class="card-body text-bg-dark p-3">
+                  <h5 class="card-title my-3">Plan Premium: "Sinfonía Total"</h5>
+                  <ul>
+                    <li>Precio: $14.99 al mes</li>
+                    <li>
+                      Acceso a la biblioteca completa de música, incluyendo
+                      lanzamientos exclusivos.
+                    </li>
+                    <li>Calidad de transmisión de alta fidelidad (lossless).</li>
+                    <li>Reproducción sin interrupciones y sin anuncios.</li>
+                    <li>
+                      Creación de listas de reproducción colaborativas con otros
+                      usuarios.
+                    </li>
+                    <li>
+                      Descarga ilimitada de canciones y álbumes completos para
+                      escuchar sin conexión.
+                    </li>
+                    <li>Acceso a eventos en vivo y conciertos exclusivos.</li>
+                    <li>
+                      Soporte en dispositivos móviles, de escritorio, dispositivos
+                      inteligentes y sistemas de audio de alta gama.
+                    </li>
+                  </ul>
+                </div>
+                <div class="card-footer bg-dark">
+                  <a href="#" class="btn btn-primary">Saber más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      
     </main>
     <footer></footer>
     <script
