--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./CSS/style.css" />
     <title>Document</title>
   </head>
@@ -212,141 +215,185 @@
       </section>
 
       <h2 class="text-white mx-3 mt-5">Canciones populares</h2>
-    <section class="my-3">
-      <div class="card">
-        <div
-          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-        >
-          <div class="text-center btn-play">
-            <i class="bi bi-play-circle reproducir"></i>
-          </div>
+      <section class="my-3">
+        <div class="card">
+          <div
+            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+          >
+            <div class="text-center btn-play">
+              <i class="bi bi-play-circle reproducir"></i>
+            </div>
 
-          <div>
-            <p class="card-title mb-0">Nombre de la Canción</p>
-            <p class="card-text">Nombre del Artista</p>
-          </div>
+            <div>
+              <p class="card-title mb-0">Nombre de la Canción</p>
+              <p class="card-text">Nombre del Artista</p>
+            </div>
 
-          <div class="nombreAlbum">
-            <p class="card-text">Nombre del Álbum</p>
-          </div>
-          <div class="btn-selecion">
-            <i  class="bi bi-heart" ></i>
-            <i  class="bi bi-plus-circle"></i>
+            <div class="nombreAlbum">
+              <p class="card-text">Nombre del Álbum</p>
+            </div>
+            <div class="btn-selecion">
+              <i
+                id="corazon1"
+                class="bi bi-heart"
+                onclick="cambiarIconoFavoritos('corazon1')"
+              ></i>
+              <i
+                id="agregar1"
+                class="bi bi-plus-circle"
+                onclick="cambiarIconoAgregar('agregar1')"
+              ></i>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <div
-          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-        >
-          <div class="text-center btn-play">
-            <i class="bi bi-play-circle reproducir"></i>
-          </div>
+        <div class="card">
+          <div
+            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+          >
+            <div class="text-center btn-play">
+              <i class="bi bi-play-circle reproducir"></i>
+            </div>
 
-          <div>
-            <p class="card-title mb-0">Nombre de la Canción</p>
-            <p class="card-text">Nombre del Artista</p>
-          </div>
+            <div>
+              <p class="card-title mb-0">Nombre de la Canción</p>
+              <p class="card-text">Nombre del Artista</p>
+            </div>
 
-          <div class="nombreAlbum">
-            <p class="card-text">Nombre del Álbum</p>
-          </div>
-          <div class="btn-selecion">
-            <i class="bi bi-heart"></i>
-            <i class="bi bi-plus-circle"></i>
+            <div class="nombreAlbum">
+              <p class="card-text">Nombre del Álbum</p>
+            </div>
+            <div class="btn-selecion">
+              <i
+                id="corazon2"
+                class="bi bi-heart"
+                onclick="cambiarIconoFavoritos('corazon2')"
+              ></i>
+              <i
+                id="agregar2"
+                class="bi bi-plus-circle"
+                onclick="cambiarIconoAgregar('agregar2')"
+              ></i>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <div
-          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-        >
-          <div class="text-center btn-play">
-            <i class="bi bi-play-circle reproducir"></i>
-          </div>
+        <div class="card">
+          <div
+            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+          >
+            <div class="text-center btn-play">
+              <i class="bi bi-play-circle reproducir"></i>
+            </div>
 
-          <div>
-            <p class="card-title mb-0">Nombre de la Canción</p>
-            <p class="card-text">Nombre del Artista</p>
-          </div>
+            <div>
+              <p class="card-title mb-0">Nombre de la Canción</p>
+              <p class="card-text">Nombre del Artista</p>
+            </div>
 
-          <div class="nombreAlbum">
-            <p class="card-text">Nombre del Álbum</p>
-          </div>
-          <div class="btn-selecion">
-            <i class="bi bi-heart"></i>
-            <i class="bi bi-plus-circle"></i>
+            <div class="nombreAlbum">
+              <p class="card-text">Nombre del Álbum</p>
+            </div>
+            <div class="btn-selecion">
+              <i
+                id="corazon3"
+                class="bi bi-heart"
+                onclick="cambiarIconoFavoritos('corazon3')"
+              ></i>
+              <i
+                id="agregar3"
+                class="bi bi-plus-circle"
+                onclick="cambiarIconoAgregar('agregar3')"
+              ></i>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <div
-          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-        >
-          <div class="text-center btn-play">
-            <i class="bi bi-play-circle reproducir"></i>
-          </div>
+        <div class="card">
+          <div
+            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+          >
+            <div class="text-center btn-play">
+              <i class="bi bi-play-circle reproducir"></i>
+            </div>
 
-          <div>
-            <p class="card-title mb-0">Nombre de la Canción</p>
-            <p class="card-text">Nombre del Artista</p>
-          </div>
+            <div>
+              <p class="card-title mb-0">Nombre de la Canción</p>
+              <p class="card-text">Nombre del Artista</p>
+            </div>
 
-          <div class="nombreAlbum">
-            <p class="card-text">Nombre del Álbum</p>
-          </div>
-          <div class="btn-selecion">
-            <i class="bi bi-heart"></i>
-            <i class="bi bi-plus-circle"></i>
+            <div class="nombreAlbum">
+              <p class="card-text">Nombre del Álbum</p>
+            </div>
+            <div class="btn-selecion">
+              <i
+                id="corazon4"
+                class="bi bi-heart"
+                onclick="cambiarIconoFavoritos('corazon4')"
+              ></i>
+              <i
+                id="agregar4"
+                class="bi bi-plus-circle"
+                onclick="cambiarIconoAgregar('agregar4')"
+              ></i>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <div
-          class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
-        >
-          <div class="text-center btn-play">
-            <i class="bi bi-play-circle reproducir"></i>
-          </div>
+        <div class="card">
+          <div
+            class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
+          >
+            <div class="text-center btn-play">
+              <i class="bi bi-play-circle reproducir"></i>
+            </div>
 
-          <div>
-            <p class="card-title mb-0">Nombre de la Canción</p>
-            <p class="card-text">Nombre del Artista</p>
-          </div>
+            <div>
+              <p class="card-title mb-0">Nombre de la Canción</p>
+              <p class="card-text">Nombre del Artista</p>
+            </div>
 
-          <div class="nombreAlbum">
-            <p class="card-text">Nombre del Álbum</p>
-          </div>
-          <div class="btn-selecion">
-            <i class="bi bi-heart"></i>
-            <i class="bi bi-plus-circle"></i>
+            <div class="nombreAlbum">
+              <p class="card-text">Nombre del Álbum</p>
+            </div>
+            <div class="btn-selecion">
+              <i
+                id="corazon5"
+                class="bi bi-heart"
+                onclick="cambiarIconoFavoritos('corazon5')"
+              ></i>
+              <i
+                id="agregar5"
+                class="bi bi-plus-circle"
+                onclick="cambiarIconoAgregar('agregar5')"
+              ></i>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
 
-    </section>
-
-    <section class="my-5">
+      <section class="my-5">
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-4 col-md-6 mt-3">
               <div class="card custom-card">
                 <div class="card-body text-bg-dark p-3">
-                  <h5 class="card-title my-3">Plan Básico: "Melodía Esencial"</h5>
+                  <h5 class="card-title my-3">
+                    Plan Básico: "Melodía Esencial"
+                  </h5>
                   <ul>
                     <li>Precio: $4.99 al mes</li>
-                    <li>Acceso ilimitado a la biblioteca de música estándar.</li>
+                    <li>
+                      Acceso ilimitado a la biblioteca de música estándar.
+                    </li>
                     <li>Calidad de transmisión estándar (128 kbps).</li>
                     <li>Anuncios ocasionales entre canciones.</li>
                     <li>
-                      Posibilidad de crear listas de reproducción personalizadas.
+                      Posibilidad de crear listas de reproducción
+                      personalizadas.
                     </li>
                     <li>
                       Descarga de hasta 30 canciones al mes para escuchar sin
                       conexión.
                     </li>
                     <li>Soporte en dispositivos móviles y de escritorio.</li>
-                  </ul>   
+                  </ul>
                 </div>
                 <div class="card-footer bg-dark">
                   <a href="#" class="btn btn-primary">Saber más</a>
@@ -355,8 +402,10 @@
             </div>
             <div class="col-lg-4 col-md-6 mt-3">
               <div class="card custom-card">
-                <div class="card-body text-bg-dark p-3 ">
-                  <h5 class="card-title my-3">Plan Estándar: "Armonía Completa"</h5>
+                <div class="card-body text-bg-dark p-3">
+                  <h5 class="card-title my-3">
+                    Plan Estándar: "Armonía Completa"
+                  </h5>
                   <ul>
                     <li>Precio: $9.99 al mes</li>
                     <li>Acceso completo a la biblioteca de música premium.</li>
@@ -367,7 +416,8 @@
                       personalizadas.
                     </li>
                     <li>
-                      Descarga ilimitada de canciones para escuchar sin conexión.
+                      Descarga ilimitada de canciones para escuchar sin
+                      conexión.
                     </li>
                     <li>Función de recomendaciones personalizadas.</li>
                     <li>
@@ -375,7 +425,6 @@
                       dispositivos inteligentes.
                     </li>
                   </ul>
-                  
                 </div>
                 <div class="card-footer bg-dark">
                   <a href="#" class="btn btn-primary">Saber más</a>
@@ -385,14 +434,18 @@
             <div class="col-lg-4 mt-3">
               <div class="card custom-card">
                 <div class="card-body text-bg-dark p-3">
-                  <h5 class="card-title my-3">Plan Premium: "Sinfonía Total"</h5>
+                  <h5 class="card-title my-3">
+                    Plan Premium: "Sinfonía Total"
+                  </h5>
                   <ul>
                     <li>Precio: $14.99 al mes</li>
                     <li>
                       Acceso a la biblioteca completa de música, incluyendo
                       lanzamientos exclusivos.
                     </li>
-                    <li>Calidad de transmisión de alta fidelidad (lossless).</li>
+                    <li>
+                      Calidad de transmisión de alta fidelidad (lossless).
+                    </li>
                     <li>Reproducción sin interrupciones y sin anuncios.</li>
                     <li>
                       Creación de listas de reproducción colaborativas con otros
@@ -404,8 +457,9 @@
                     </li>
                     <li>Acceso a eventos en vivo y conciertos exclusivos.</li>
                     <li>
-                      Soporte en dispositivos móviles, de escritorio, dispositivos
-                      inteligentes y sistemas de audio de alta gama.
+                      Soporte en dispositivos móviles, de escritorio,
+                      dispositivos inteligentes y sistemas de audio de alta
+                      gama.
                     </li>
                   </ul>
                 </div>
@@ -417,7 +471,6 @@
           </div>
         </div>
       </section>
-      
     </main>
     <footer></footer>
     <script
