se modifió las lista de los planes

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                   <h5 class="card-title my-3">
                     Plan Básico: "Melodía Esencial"
                   </h5>
-                  <ul>
+                  <ul class="text-start">
                     <li>Precio: $4.99 al mes</li>
                     <li>
                       Acceso ilimitado a la biblioteca de música estándar.
@@ -406,7 +406,7 @@
                   <h5 class="card-title my-3">
                     Plan Estándar: "Armonía Completa"
                   </h5>
-                  <ul>
+                  <ul class="text-start">
                     <li>Precio: $9.99 al mes</li>
                     <li>Acceso completo a la biblioteca de música premium.</li>
                     <li>Calidad de transmisión mejorada (320 kbps).</li>
@@ -437,7 +437,7 @@
                   <h5 class="card-title my-3">
                     Plan Premium: "Sinfonía Total"
                   </h5>
-                  <ul>
+                  <ul class="text-start">
                     <li>Precio: $14.99 al mes</li>
                     <li>
                       Acceso a la biblioteca completa de música, incluyendo
