--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -53,7 +53,9 @@
         <article class="container">
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="card colorCeleste border-dark m-2 shadow-lg">
+              <div
+                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
+              >
                 <img
                   src="../img/AVATAR CORNET.png"
                   class="card-img-top rounded-circle p-3"
@@ -75,7 +77,9 @@
               </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="card colorCeleste border-dark m-2 shadow-lg">
+              <div
+                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
+              >
                 <img
                   src="../img/AVATAR CORNET.png"
                   class="card-img-top rounded-circle p-3"
@@ -97,7 +101,9 @@
               </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="card colorCeleste border-dark m-2 shadow-lg">
+              <div
+                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
+              >
                 <img
                   src="../img/AVATAR CORNET.png"
                   class="card-img-top rounded-circle p-3"
@@ -119,7 +125,9 @@
               </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="card colorCeleste border-dark m-2 shadow-lg">
+              <div
+                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
+              >
                 <img
                   src="../img/AVATAR CORNET.png"
                   class="card-img-top rounded-circle p-3"
@@ -141,7 +149,9 @@
               </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="card colorCeleste border-dark m-2 shadow-lg">
+              <div
+                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
+              >
                 <img
                   src="../img/AVATAR CORNET.png"
                   class="card-img-top rounded-circle p-3"
@@ -163,7 +173,9 @@
               </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="card colorCeleste border-dark m-2 shadow-lg">
+              <div
+                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
+              >
                 <img
                   src="../img/AVATAR CORNET.png"
                   class="card-img-top rounded-circle p-3"
@@ -185,7 +197,9 @@
               </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="card colorCeleste border-dark m-2 shadow-lg">
+              <div
+                class="card colorCeleste border-2 border-white m-2 my-md-4 shadow-lg"
+              >
                 <img
                   src="../img/AVATAR CORNET.png"
                   class="card-img-top rounded-circle p-3"
