se agregaron los alt a los imagenes

--- a/index.html
+++ b/index.html
@@ -27,26 +27,42 @@
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
-                  <img src="./img/cover.jpg" class="d-block" alt="..." />
+                  <img
+                    src="./img/cover.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
                   <p class="text-center text-white">Nombre artista</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
-                  <img src="./img/cover.jpg" class="d-block" alt="..." />
+                  <img
+                    src="./img/cover.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
                   <p class="text-center text-white">Nombre artista</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
-                  <img src="./img/cover.jpg" class="d-block" alt="..." />
+                  <img
+                    src="./img/cover.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
                   <p class="text-center text-white">Nombre artista</p>
                 </div>
 
                 <div
                   class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
-                  <img src="./img/cover.jpg" class="d-block" alt="..." />
+                  <img
+                    src="./img/cover.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
                   <p class="text-center text-white">Nombre artista</p>
                 </div>
               </div>
@@ -56,26 +72,42 @@
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
-                  <img src="./img/cover2.jpg" class="d-block" alt="..." />
+                  <img
+                    src="./img/cover2.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
                   <p class="text-center text-white">Nombre artista</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
-                  <img src="./img/cover2.jpg" class="d-block" alt="..." />
+                  <img
+                    src="./img/cover2.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
                   <p class="text-center text-white">Nombre artista</p>
                 </div>
                 <div
                   class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
-                  <img src="./img/cover2.jpg" class="d-block" alt="..." />
+                  <img
+                    src="./img/cover2.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
                   <p class="text-center text-white">Nombre artista</p>
                 </div>
 
                 <div
                   class="d-flex justify-content-center flex-column d-none d-sm-block selecion-artista"
                 >
-                  <img src="./img/cover2.jpg" class="d-block" alt="..." />
+                  <img
+                    src="./img/cover2.jpg"
+                    class="d-block"
+                    alt="imagen de artista"
+                  />
                   <p class="text-center text-white">Nombre artista</p>
                 </div>
               </div>
@@ -112,7 +144,7 @@
               <img
                 src="./img/like.png"
                 class="img-fluid album mb-1"
-                alt="..."
+                alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href=""><i class="bi bi-play-circle-fill text-black"></i></a>
@@ -125,7 +157,7 @@
               <img
                 src="./img/cover.jpg"
                 class="img-fluid album mb-1"
-                alt="..."
+                alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href=""><i class="bi bi-play-circle-fill"></i></a>
@@ -138,7 +170,7 @@
               <img
                 src="./img/cover.jpg"
                 class="img-fluid album mb-1"
-                alt="..."
+                alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href=""><i class="bi bi-play-circle-fill"></i></a>
@@ -151,7 +183,7 @@
               <img
                 src="./img/cover.jpg"
                 class="img-fluid album mb-1"
-                alt="..."
+                alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href=""><i class="bi bi-play-circle-fill"></i></a>
@@ -164,7 +196,7 @@
               <img
                 src="./img/cover.jpg"
                 class="img-fluid album mb-1"
-                alt="..."
+                alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href=""><i class="bi bi-play-circle-fill"></i></a>
@@ -177,7 +209,7 @@
               <img
                 src="./img/cover.jpg"
                 class="img-fluid album mb-1"
-                alt="..."
+                alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href=""><i class="bi bi-play-circle-fill"></i></a>
@@ -190,7 +222,7 @@
               <img
                 src="./img/cover.jpg"
                 class="img-fluid album mb-1"
-                alt="..."
+                alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href=""><i class="bi bi-play-circle-fill"></i></a>
@@ -203,7 +235,7 @@
               <img
                 src="./img/cover.jpg"
                 class="img-fluid album mb-1"
-                alt="..."
+                alt="imagen de album"
               />
               <div class="icono-superpuesto">
                 <a href=""><i class="bi bi-play-circle-fill"></i></a>
