Agregue detalles en meta de inicio y sobreNosotros, tambien se limpio el codigo

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Sobre Nosotros" />
-    <meta name="description" content="Página Sobre nosotros" />
+    <meta name="keywords" content="Inicio, Sound G3" />
+    <meta name="description" content="Inicio de Sound G3" />
     <meta name="author" content="Cornet Diego" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
