--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="../CSS/style.css" />
     <title>Sobre nosotros</title>
   </head>
-  <body class="">
+  <body>
     <header></header>
     <main>
       <section class="fuentePrincipal">
