--- a/pages/listaReproduccion.html
+++ b/pages/listaReproduccion.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Inicio, Lista de reproducción, playlist" />
-    <meta name="description" content="Inicio de Sound G3" />
+    <meta name="keywords" content="Lista de reproducción" />
+    <meta name="description" content="Lista de reproducción del usuario" />
     <meta name="author" content="Cornet Diego" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,22 +27,12 @@
       href="../img/logosoundg3.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./CSS/style.css" />
-    <title>Inicio</title>
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <title>Lista de reproducción</title>
   </head>
   <body>
     <header></header>
-    <main>
-      <section class="container">
-        <div class="text-center">
-          <a
-            class="btn btn-primary m-5 colorMorado border-white"
-            href="./pages/sobreNosotros.html"
-            >Ir a lista de reproducción</a
-          >
-        </div>
-      </section>
-    </main>
+    <main></main>
     <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
