Agregue banner de la lista de reproducción y detalles en los colores

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       href="../img/logosoundg3.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Inicio</title>
   </head>
   <body>
@@ -37,7 +37,7 @@
         <div class="text-center">
           <a
             class="btn btn-primary m-5 colorMorado border-white"
-            href="./pages/sobreNosotros.html"
+            href="./pages/listaReproduccion.html"
             >Ir a lista de reproducción</a
           >
         </div>
