--- a/pages/listaReproduccion.html
+++ b/pages/listaReproduccion.html
@@ -27,12 +27,42 @@
       href="../img/logosoundg3.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Lista de reproducción</title>
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <section class="fuentePrincipal">
+        <div class="card mb-3 colorGradiente">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="../img/playlist.jpg"
+                class="img-fluid p-3 rounded-5"
+                alt="fondo de playlist"
+              />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h1 class="card-title my-3 text-white">
+                  <i class="bi bi-music-note-list colorMoradoText"></i> La mejor playlist
+                </h1>
+                <p class="card-text my-3 fw-bold">
+                  La mejor recopilación de la música que más me gusta!
+                </p>
+                <p class="card-text">
+                  <p class="text-white"
+                    >última canción agregada hace 5 minutos <i class="bi bi-clock"></i></p
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section></section>
+    </main>
     <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
