Agregue detalles responsive y de diseños de iconos y colores

--- a/pages/listaReproduccion.html
+++ b/pages/listaReproduccion.html
@@ -45,16 +45,16 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h1 class="card-title my-3 text-white">
-                  <i class="bi bi-music-note-list colorMoradoText"></i> La mejor playlist
+                <h1 class="card-title text-white display-5">
+                  <i class="bi bi-music-note-list colorMoradoText"></i> La mejor
+                  playlist
                 </h1>
-                <p class="card-text my-3 fw-bold">
+                <p class="card-text my-4 fw-bold">
                   La mejor recopilación de la música que más me gusta!
                 </p>
-                <p class="card-text">
-                  <p class="text-white"
-                    >última canción agregada hace 5 minutos <i class="bi bi-clock"></i></p
-                  >
+                <p class="card-text text-white">
+                  última canción agregada hace 5 minutos
+                  <i class="bi bi-clock colorCelesteText"></i>
                 </p>
               </div>
             </div>
