se creó la seccion de tabla y se le dio estilo con bootstrap

--- a/pages/administrarCanciones.html
+++ b/pages/administrarCanciones.html
@@ -25,6 +25,34 @@
           Nueva Cancion
         </button>
       </div>
+      <section class="table-responsive mt-4">
+        <table class="table table-dark table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Cancion</th>
+              <th scope="col">Artista</th>
+              <th scope="col">Album</th>
+              <th scope="col">Año</th>
+              <th scope="col">Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="tablaContacto">
+            <tr>
+              <th scope="row">1</th>
+              <td>Karaoke</td>
+              <td>Gustavo Cerati</td>
+              <td>Siempre es hoy</td>
+              <td>1993</td>
+              <td>
+                <a class="btn btn-info my-1" href="./pages/detalleContacto.html">Ver mas</a>
+                <button class="btn btn-warning">Editar</button>
+                <button class="btn btn-danger my-1">Borrar</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
