--- a/pages/administrarCanciones.html
+++ b/pages/administrarCanciones.html
@@ -54,6 +54,72 @@
         </table>
       </section>
     </main>
+
+    <div
+    class="modal"
+    id="modalContacto"
+    tabindex="-1"
+    aria-labelledby="modalContactoLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog">
+      <div class="modal-content text-bg-dark">
+        <div class="modal-header">
+          <h5 class="modal-title">Agregar cancion</h5>
+          <button
+            type="button"
+            class="btn-close bg-light"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="nombre" class="form-label">Cancion</label>
+              <input
+                type="text"
+                id="cancion"
+                class="form-control"
+                placeholder="Muchacha ojo de papel"
+              />
+              <div class="invalid-feedback">
+                Ingresaste una cantidad de caracteres erroneos para la cancion
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="apellido" class="form-label">Artista</label>
+              <input
+                type="text"
+                id="artista"
+                class="form-control"
+                placeholder="Ej: Almendra"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Album</label>
+              <input
+                type="text"
+                id="album"
+                class="form-control"
+                placeholder="Ej: Almendra"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="telefono" class="form-label">Año</label>
+              <input
+                type="number"
+                id="añio"
+                class="form-control"
+                placeholder="Ej: 1999"
+              />
+            </div>
+            <button class="btn btn-warning w-100 mt-4" type="submit">Agregar cancion</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
