--- a/pages/administrarCanciones.html
+++ b/pages/administrarCanciones.html
@@ -76,7 +76,7 @@
         <div class="modal-body">
           <form>
             <div class="mb-3">
-              <label for="nombre" class="form-label">Cancion</label>
+              <label for="cancion class="form-label">Cancion</label>
               <input
                 type="text"
                 id="cancion"
@@ -88,7 +88,7 @@
               </div>
             </div>
             <div class="mb-3">
-              <label for="apellido" class="form-label">Artista</label>
+              <label for="artista" class="form-label">Artista</label>
               <input
                 type="text"
                 id="artista"
@@ -97,7 +97,7 @@
               />
             </div>
             <div class="mb-3">
-              <label for="email" class="form-label">Album</label>
+              <label for="album" class="form-label">Album</label>
               <input
                 type="text"
                 id="album"
@@ -106,7 +106,7 @@
               />
             </div>
             <div class="mb-3">
-              <label for="telefono" class="form-label">Año</label>
+              <label for="año" class="form-label">Año</label>
               <input
                 type="number"
                 id="añio"
