se agregaron ejemplo en la lista

--- a/pages/administrarCanciones.html
+++ b/pages/administrarCanciones.html
@@ -17,7 +17,7 @@
       <div class="d-flex align-items-center justify-content-between titulo">
         <h1 class="text-white">Lista de Canciones</h1>
         <button
-          class="btn btn-success"
+          class="btn btn-success mt-5"
           data-bs-toggle="modal"
           data-bs-target="#modalContacto"
           id="btnNuevoContacto"
@@ -40,10 +40,35 @@
           <tbody id="tablaContacto">
             <tr>
               <th scope="row">1</th>
-              <td>Karaoke</td>
-              <td>Gustavo Cerati</td>
-              <td>Siempre es hoy</td>
-              <td>1993</td>
+              <td>Musica ligera</td>
+              <td>Soda stereo</td>
+              <td>Cancion animal</td>
+              <td>1990</td>
+              <td>
+                <a class="btn btn-info my-1" href="./pages/detalleContacto.html">Ver mas</a>
+                <button class="btn btn-warning">Editar</button>
+                <button class="btn btn-danger my-1">Borrar</button>
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">2</th>
+              <td>Musica ligera</td>
+              <td>Soda stereo</td>
+              <td>Cancion animal</td>
+              <td>1990</td>
+              <td>
+                <a class="btn btn-info my-1" href="./pages/detalleContacto.html">Ver mas</a>
+                <button class="btn btn-warning">Editar</button>
+                <button class="btn btn-danger my-1">Borrar</button>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Musica ligera</td>
+              <td>Soda stereo</td>
+              <td>Cancion animal</td>
+              <td>1990</td>
               <td>
                 <a class="btn btn-info my-1" href="./pages/detalleContacto.html">Ver mas</a>
                 <button class="btn btn-warning">Editar</button>
